--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <ul>
 <font face="Comic Sans MS,arial,verdana">
 <li><a href="index2.html">Juego</a></li>
-<li><a href="hojadeestilos.html">F. del alumno</a></li>
+<li><a href="index3.html">F. del alumno</a></li>
 <li><a href="videosrandom2.html">Videos random</a></li>
 <li><a href="memes.html">Memes</a></li>
 </font>
