--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <li><a href="index2.html">Juego</a></li>
 <li><a href="index3.html">F. del alumno</a></li>
 <li><a href="index4.html">Videos random</a></li>
-<li><a href="memes.html">Memes</a></li>
+<li><a href="index5.html">Memes</a></li>
 </font>
 </ul>
 </div>
