--- a/index3.html
+++ b/index3.html
@@ -47,7 +47,7 @@ table {
 <ul>
 <font face="Comic Sans MS,arial,verdana">
 <li><a href="index.html">INICIO</a></li>
-<li><a href="contrasena.html">PRIVADO</a></li>
+<li><a href="index7.html">PRIVADO</a></li>
 </font>
 </ul>
 </div>
